--- a/css1.css
+++ b/css1.css
@@ -36,7 +36,6 @@ h1 {
 
 .b{font-family: Century;
     color: Black;
-    font-weight: bold;
     font-size: 18px;
     text-align: center;
     background-color: red;
@@ -49,9 +48,9 @@ h1 {
     font-size: 25px;
     text-align: center;
     background-color: limegreen;
-    border-radius: 10px;
-    width: 150px;
-    height: 75px;
+    border-radius: 20px;
+    -webkit-transition-duration: 0.5s;
+    transition-duration: 0.5s;
 }
 
 .wrap {
@@ -59,7 +58,8 @@ h1 {
     padding: 20px;
     padding-right: 20px;
     background: rgb(8, 7, 7);
-    min-height: 555px;
+    height: canvas.height+20px;
+    width: canvas.width;
     overflow: hidden;}
 
 .sidebar {
@@ -138,3 +138,29 @@ li a:hover {
     width: 300px;
     float: right;
 }
+
+.manual{
+    background-color: #c7cfe7;
+    color: black;
+    font-family: Helvetica;
+    padding: 50px 20px;
+    font-size: 20px;
+    text-align: center;
+}
+.rb{font-family: Century;
+    color: Black;
+    font-size: 18px;
+    text-align: center;
+    background-color: red;
+    border-radius: 5px;}
+
+.rb:hover {
+    font-family: Century;
+    color: #d1d1d1;
+    font-weight: bold;
+    font-size: 25px;
+    text-align: center;
+    background-color: #860014;
+    border-radius: 20px;
+    -webkit-transition-duration: 0.5s;
+    transition-duration: 0.5s;
