--- a/css1.css
+++ b/css1.css
@@ -1,33 +1,34 @@
 body {
-    background-image: linear-gradient(to right, #e7f6ff, #bddcff);
+    background-color: #ffffff
 }  /*cuerpo*/
 
 h1 {
     font-family: Century ;
-    color: #0D189A;;
-    font-weight: bold;
+    color: white ;
+    font-weight: bold;min-width: 1200px;
     padding-left:20px;
-    padding-bottom: 10px;
-    font-size: 75px;
+    font-size: 85px;
     text-align: left;
-    background: rgb(199, 207, 231);
-    margin: -8px 0px 7px auto;
+    background: #00417b;
+    margin: -20px 0px 5px auto;  /*#c2baad*/
     border-radius: 5px;
 } /*Titulo grande*/
 
 .t0{ font-family: Century;
     color: white;
+    margin: 10px;
     font-weight: bold;
-    font-size: 18px;
-    background: rgb(199, 207, 231);
+    font-size: 22px;
+    background: #1b85c9;
     text-align: center;
+    border-radius: 7px;
 } /*Titulo iniciales*/
 
 .t1{ font-family: Century;
     color: black;
     font-weight: bold;
     font-size: 14px;
-    border-radius: 5px;
+    border-radius: 10px;
 } /*Titulo finales*/
 
 .t2{
@@ -37,9 +38,9 @@ h1 {
 
 .b{font-family: Century;
     color: Black;
-    font-size: 18px;
+    font-size: 20px;
     text-align: center;
-    background-color: red;
+    background-color: #7e7e7e;
     border-radius: 5px;} /*boton calcular*/
 
 .b:hover {
@@ -48,19 +49,17 @@ h1 {
     font-weight: bold;
     font-size: 25px;
     text-align: center;
-    background-color: limegreen;
+    background-color:#1b85c9;
     border-radius: 20px;
     -webkit-transition-duration: 0.5s;
     transition-duration: 0.5s;
 } /*boton calcular hover*/
 
 .wrap {
-    margin: 2px;
     padding: 20px;
-    padding-right: 20px;
-    background: rgb(8, 7, 7);
-    height: canvas.height+20px;
-    width: canvas.width;
+    background: black;
+    height: 620px;
+    min-width: 1200px;
     overflow: hidden;} /*reborde canvas*/
 
 .sidebar {
@@ -69,9 +68,9 @@ h1 {
     font-weight: bold;
     font-size: 16px;
     text-align: center;
-    background: rgb(199, 207, 231);
-    min-height: 360px;
-    min-width: 1291px;
+    background: #c2baad;
+    height: 500px;
+    min-width: 1200px;
     border-radius: 5px;
 } /*botonera*/
 
@@ -90,7 +89,7 @@ ul {
     padding: 0;
     border-radius: 5px;
     width: 130px;
-    background: rgb(199, 207, 231);
+    background: #c2baad;
 } /*boton menu*/
 
 li a {
@@ -103,7 +102,7 @@ li a {
     text-decoration: none;
 } /*boton menu*/
 li a:hover {
-    background-color: #555;
+    background-color: #1b85c9;
     color: white;
 } /*boton menu hover*/
 
@@ -117,19 +116,7 @@ li a:hover {
     width: 300px;
     float: left;
 } /*div iniciales*/
-.b2{
-    position: absolute;
-    right: 600px;
-    font-family: Century;
-    color: black;
-    font-weight: bold;
-    font-size: 14px;
-    border-radius: 5px;
-    text-align: center;
-    width: 300px;
-    float: right;
-} /*div finales*/
-.b3{position: absolute;
+.b2{position: absolute;
     right: 110px;
     font-family: Century;
     color: black;
@@ -142,7 +129,7 @@ li a:hover {
 } /*div resultados*/
 
 .manual{
-    background-color: #c7cfe7;
+    background-color:#c2baad;
     color: black;
     font-family: Helvetica;
     padding: 50px 20px;
@@ -154,7 +141,7 @@ li a:hover {
     color: Black;
     font-size: 18px;
     text-align: center;
-    background-color: red;
+    background-color: #7e7e7e;
     border-radius: 5px;} /*boton tutorial*/
 .rb:hover {
     font-family: Century;
