--- a/css1.css
+++ b/css1.css
@@ -45,7 +45,7 @@ h1 {
 
 .b:hover {
     font-family: Century;
-    color: Black;
+    color: White;
     font-weight: bold;
     font-size: 25px;
     text-align: center;
